feat: v3 개발에 따른 테스트 코드 수정 완료